modify solutions to problem - "40. Combination Sum II"